fix bug filtering on opportunity
Former-commit-id: 246b26c74e6d053566a806af95b35401e6f37301 [formerly f3a49ac3305463fec47030b935ec71619387f8f8] [formerly cd52d834a199cae8a410a8eae7f94b917b14be0c [formerly 934e162bebc623b915a17084f97c78ac05bf5800]]
Former-commit-id: ead748e6fde7a46a2c0b730fe6a9030ab6a8e063 [formerly 0bfb95d12f419e17eee122d1a164b8ef6b19b77c]
Former-commit-id: 0a56305623b1197e564a95dee63bc127bebfb121

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1,9 +1,10 @@
 <div class="row subHeader">
   <div class="subHContent">
     <div class="currentApp">
+    
 
      <h2 class="page-title">
-     <p class="fittext autoresizeName" max-font-size="18" text="testtitle" style="height:20px; width:195px"></p>
+      {{active_app.label}}
      <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
     </h2>
       <div class="filterOptions">
