finishing opportunities list cards design
Former-commit-id: 34f914201ecad1ff7222ff49225fd3cda87eeeeb [formerly aac45389b1d9dda2bbd6cea84841722e7f10ada0] [formerly 3f59c297a40069560cd7a23afc8f271df015a141 [formerly 761f2d11d22f3ccd39ce5ff9a622f6d15d025309]]
Former-commit-id: e8b1cc435ccc4405ac65751de0e10c7a1723fb5b [formerly d79844c61d87f85f9e1e0669aa71cd603af668e7]
Former-commit-id: e09dffef7c981fb14226a4ccce4d8373798b2528

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -145,7 +145,7 @@
                 <div class="text">
                   <div class="name " >
                     <a class="profile-link" href="/#/accounts/show/<%= account.id %>">
-                      <p class="fittext autoresizeName" max-font-size="18" text="account.name"></p>
+                      <p class="fittext autoresizeName" max-height="18" max-font-size="18" text="account.name"></p>
                     </a>
                   </div>
                   <div class="pitch">
