--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -44,10 +44,11 @@
             <div class="col-md-2" ng-mouseenter="showUpload= true" ng-mouseleave="showUpload = false">
               <div class="pic">
                   <img alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo-large" ng-src="<%=imageSrc%>">
+                  <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-contact" data-toggle="modal" style="display: none;">
+                    <img src="/static/img/upload_logo.png">
+                  </a>
               </div>
-               <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
-                 <img src="/static/img/upload_logo.png">
-               </a>
+
             </div>
             <div class="col-md-10">
               <div class="row">
