fixing opportunity design bugs on small screen
Former-commit-id: e9ba8e54091dd57790c948d33090929451af9aa8 [formerly 4f442cb83934851963c201bc4d853809e194f53a] [formerly b645b4e4d642308dba7cb43d626178b5038a7f21 [formerly 7f0e671829a94f9ce95ff376c507a71121bf001b]]
Former-commit-id: c7055babc3e231376a97681bfc973b1b3fd07da2 [formerly 9054b886a36deb85198d00e556e4d800f978fa9a]
Former-commit-id: ff9cad33a2664e2094e496e5b4b0eb200f00c1a2

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -87,9 +87,10 @@
                             <div class="stage">
                                 <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability"></div>
                                 <div class="oppStage">
+                                <div class="oppStageContent">
                                   <span><%=opportunity.current_stage.name%></span><br>
                                   <span><%=opportunity.current_stage.probability%> %</span>
-
+                                </div>
                                 </div>
                             </div>
                           </div>
