new design for tasks list
Former-commit-id: 86808d34788ebe5c26b80ec82ae06627a6e7180f [formerly d0b1db6299846909c9b92de0cd74255f924570f2] [formerly 95b25f3adf60d48ef50f84092910245e7624e814 [formerly 063346746a7b78d1d32218d291c7f73e4f18c0ae]]
Former-commit-id: 8e7c25cb5ff6e268796efbbc2da1cb7fa323edcc [formerly 981ca84bf2da56ae5aaca8d42f0175690a273995]
Former-commit-id: f8ddc4af0e33b336a429a61dd909ba7bb3ee466d

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1,11 +1,14 @@
 <div class="row subHeader">
-  <div class="subHContent">
     <div class="currentApp">
-
-     <h2 class="page-title">
-     <p class="fittext autoresizeName" max-font-size="18" text="testtitle" style="height:20px; width:195px"></p>
-     <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-    </h2>
+       <h2 class="page-title">
+       {{active_app.label}}
+       <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+      </h2>
+    </div> 
+    <div class=" subHeaderContent">
+      <div class="col-md-9">
+      <div class="row">
+      <div class="col-md-10 col-xs-10">
       <div class="filterOptions">
         <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Accounts</span> </span>
         <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Accounts</span></span>
@@ -23,11 +26,15 @@
               </li>
             </ul>
       </div>
-        <a href="/#/accounts/new" class="btn red afterScrollBtn hidden">
+      </div>
+      </div>
+      <div class="col-md-2 col-xs-2">
+      <a href="/#/accounts/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Account</span> 
          </a>
       </div>
-    </div> 
+      </div>
+    </div>
     </div>
 </div>
 <div  class="page-content">
@@ -145,7 +152,7 @@
                 <div class="text">
                   <div class="name " >
                     <a class="profile-link" href="/#/accounts/show/<%= account.id %>">
-                      <p class="fittext autoresizeName" max-height="18" max-font-size="18" text="account.name"></p>
+                      <p class="fittext autoresizeName" max-heit="18" max-font-size="18" text="account.name"></p>
                     </a>
                   </div>
                   <div class="pitch">
