adding no result card for tasks page
Former-commit-id: 62aa0a48731a2fce0cc63189e23bcbaa35b1bb5c [formerly 538e4e26ab6da899fa22ff55589e8768ab0c1f80] [formerly a8047f36042456d826c3b830f1af731f70e6b582 [formerly 6c8edfad49fd934c2b437582ba7725032fd3dfab]]
Former-commit-id: f76a905eedc737c805faae7b558e57bb22c895a4 [formerly d8a68b805b27dfc9871c764e3eccf003b0c94e78]
Former-commit-id: ed1d2dc58a4e433de3ba5418b4d46b7f1992ac42

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -87,6 +87,13 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
+                                  <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                       <div class="row">
+                                       <div class="col-md-12">
+                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                        </div>
+                                      </div>
+                                    </li>
                                     <li class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
@@ -165,6 +172,13 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
+                                    <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                       <div class="row">
+                                       <div class="col-md-12">
+                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                        </div>
+                                      </div>
+                                    </li>
                                     <li ng-class="{hidden: isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
@@ -243,6 +257,13 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
+                                  <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                       <div class="row">
+                                       <div class="col-md-12">
+                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                        </div>
+                                      </div>
+                                    </li>
                                     <li class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
@@ -321,6 +342,13 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
+                                   <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                       <div class="row">
+                                       <div class="col-md-12">
+                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                        </div>
+                                      </div>
+                                    </li>
                                     <li class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
@@ -399,6 +427,13 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
+                                   <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                       <div class="row">
+                                       <div class="col-md-12">
+                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                        </div>
+                                      </div>
+                                    </li>
                                     <li class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
