--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -309,7 +309,7 @@
                       <!-- BEGIN PORTLET-->
                       <div class="portlet showPage rightCardContent">
                         <div class="portlet-title line">
-                          <div class="caption"><i class="fa fa-lock"></i>Contacts </div>
+                          <div class="caption"><i class="fa fa-lock"></i>Related Contacts </div>
 
                         </div>
                         <div class="newContactform portlet-body" id="chats">
@@ -337,7 +337,7 @@
                                             <div class="col-md-12">
                                                   <div class="input-icon  margin-top-10">
                                         <i class="fa fa-envelope"></i>
-                                        <input ng-model="currentContact.email" type="email" class="form-control" placeholder="Email">
+                                        <input ng-model="currentContact.email" type="text" class="form-control" placeholder="Email">
                                       </div>
                                             </div>
                                         </div>   
