--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -133,7 +133,7 @@
     <!--HKA 19.11.2013 BEGIN Span comments-->
       <div class="col-md-12 showPage taskShowHead margin-bottom-15">
             <h2 class="page-title showTaskTitle" ng-class="{task_closed: task.status=='closed'}">
-             <span editable-text="task.title"  ng-model='task.title' onbeforesave="inlineUpdateTask(task.id,task.title)">
+             <span editable-text="task.title"  ng-model='task.title'  onbeforesave="inlinePatch('Task','', 'title',task.entityKey,$data)">
               <%=task.title%> 
              </span>
               
