fixing problem in account new
Former-commit-id: 793049a8f5cb600a7ef59742561cc5fc90d049f0 [formerly d13fdc1c07777d7799a28f318c2a328570ad3360] [formerly b4d2ad1101fe9dd48126680d484d8ad3a5b3e863 [formerly a0f40e38ed8680fe1f5e0ed9c1512df3dac18712]]
Former-commit-id: 82ea3913ec9b409d182ea52ee2ea5be48d968bfa [formerly 5f9cce11754bbba0665694b5ce10e1b06bbbe41b]
Former-commit-id: ca4fabcb01c069a7b742139cfe058b28ae69c804

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -496,29 +496,32 @@
                             <div class="row">
                               <!-- ngRepeat: opp in opportunities -->
                                <div class="col-md-12 waterfall3" ng-hide="blankStateaccount">
-                                  <div  ng-repeat="opportunity in opportunities"  class=" cardElement"  >
+                                  <div  ng-repeat="opportunity in opportunities"  class=" cardElement oppRelList"  >
                   <div class="detailsSection">
                     <div class="head">
 
                         <div class="row">
                           <div class="col-md-12 col-xs-5">
-                            <div class="stage" >
+                            <div class="stage">
                                 <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability"></div>
-                                <div class="oppStage col-md-12">
+                                <div class="oppStage">
+                                <div class="oppStageContent">
                                   <span><%=opportunity.current_stage.name%></span><br>
                                   <span><%=opportunity.current_stage.probability%> %</span>
 
                                 </div>
+                                </div>
                             </div>
+                            <div class="clearfix"></div>
                           </div>
                           <div class="oppDetails col-md-12 col-xs-7">
                             <div class="col-md-12">
                               <div class="row">
                                 <div class="col-md-12">
                                   <div class="oppDescription">
-                                    <h3>
+                                    <h4>
                                       <a href="/#/opportunities/show/<%= opportunity.id %>"><%= opportunity.name %></a>
-                                    </h3>
+                                    </h4>
                                     <p class="description ellipsis">
                                         <%= opportunity.description %>
                                           <i></i>
@@ -538,10 +541,7 @@
                                 </div>
 
                                 <div class="oppEstDate">
-                                  Estimated close date:
-                                </div>
-                                <div class="oppEstDate">
-                                  <%=opportunity.closed_date | date:'MMMM dd, yyyy'%>
+                                      Estimated close date: <%=opportunity.closed_date | date:'MMMM dd, yyyy'%>
                                 </div>
 
                             </div>
@@ -1709,7 +1709,7 @@
               autoresize: true
           });
    $('.waterfall3').waterfall({
-              colMinWidth: 210,
+              colMinWidth: 220,
               defaultContainerWidth: 840,
               autoresize: true
           });
