--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -74,59 +74,60 @@
      <div class="row">
       <div class="tab-pane">
       <div class="row">
-      <div class="col-md-12 waterfall" ng-hide="blankStatecase">
-        <div ng-repeat="casee in cases" droppable id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(casee,$index)">
-          <div class="detailsSection">
-            <div class="head">
-              <div class="pic">
-                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="casee.name"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
-                <img ng-show="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= casee.logo_img_id %>" data-hasqtip="2">
+      <div class="waterfall col-md-12" ng-hide="blankStatecase">
+        <div ng-repeat="casee in cases" droppable id="card_<%=$index%>" class="cardElement caseCard" ng-drop="dropTag(casee,$index)" >
+        <div class="caseContainer" style="border-right: 2px solid <%=priorityColor(casee.priority)%>;">
+          <div class="detailsSection row">
+          <div class="caseContent">
+              <div class="col-md-3 col-xs-3 col-pic">
+                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="casee.name"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" src="/static/img/default_company.png" >
+                <img ng-show="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" ng-src="https://docs.google.com/uc?id=<%= casee.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
-              <div class="text">
-                <div class="name">
-                  <a href="/#/cases/show/<%= casee.id %>" class="profile-link" data-id="126085" data-type="Startup"><%= casee.name %>
-                  </a>
+              <div class="col-md-9 col-xs-9">
+              <span class="badge badge-roundless badge-danger pull-right priority ng-binding" style="background-color:  <%=priorityColor(casee.priority)%>;color:<%=idealTextColor(priorityColor(casee.priority))%>;" ><%= casee.priority %></span>
+                <div class="row">
+                  <div class="col-md-2 col-xs-2">
+                    <div class="pic">
+                      <a href="/#/contacts/show/6509108836433920" class="startup-link" title="Ilyes BOUDJELTHIA">
+                        <img ng-hide="contact.profile_img_url" class="img-responsive profile-photo" height="40" width="40" src="/static/img/avatar_contact.jpg">
+                        <img ng-show="contact.profile_img_url" class="img-responsive profile-photo" ng-src="https://docs.google.com/uc?id=" data-hasqtip="2" src="https://docs.google.com/uc?id=" style="display: none;">
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-10 col-xs-10">
+                   <div class="name">
+                    <a href="/#/cases/show/<%= casee.id %>" class="profile-link" data-id="126085" data-type="Startup"><%= casee.name %>
+                    </a>
+                  </div>
+                  <div class="pitch">
+                      <p class="status  ng-binding">
+                      <span  class="contact-title" style="font-size: 12px;
+                        ">
+                            <span class="">Date:</span> <span class=""> <%=casee.updated_at | date:'MMMM dd, yyyy- HH:mm:ss'%> </span>   
+                            </span>
+                      <span class="pull-right" style="color:<%=getStatusColor(casee.current_status.name)%>"><%= casee.current_status.name %></span>  
+                        </p>
+                  </div>
+                  </div>
                 </div>
-                <div class="pitch">
-                  <span ng-show="casee.updated_at" class="contact-title" >
-                    Updated at:  <%=casee.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %> 
-                  </span>                           
-                  <span ng-show="casee.current_status" class="contact-title" >
-                    Status: 
-                    <a class="desc" href="/#/search/type:Case <%=casee.status%>">
-                      <%=casee.current_status.name %>
-                    </a>  
-                    - 
-                  </span>
-                  <span ng-show="casee.priority" class="contact-title">
-                    Priority: 
-                    <a  class="desc" href="/#/search/type:Case <%=casee.priority%>">
-                      <%=casee.priority %>
-                    </a>
-                  </span> 
-                  <span ng-show="casee.contact_name" class="contact-title"> 
-                    Customer:
-                    <a  class="desc" href="/#/search/type:Case <%=casee.contact_name%>">
-                      <%=casee.contact_name %>
-                    </a>
-                  </span>
-                  <span ng-show="casee.casee_name" class="contact-title"> from
-                    <a  class="desc" href="/#/search/type:Case <%=casee.casee_name%>">
-                      <%=casee.casee_name %>
-                    </a>
-                  </span>
-                </div>
+
+
               </div>
               <div class="clearfix"></div>
             </div>
-          </div>
-          <div class="tagsSection" ng-class="{hidden: casee.tags==null}">
+            </div>
+          <div class="tagsSection " ng-class="{hidden: casee.tags==null}">
+          <div class="col-md-12">
             <div class="sectionContent">
-              <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+              <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
               </a>
             </div>
+            </div>
           </div>
+            <div class="clearfix"></div>
+        </div>
+        </div>
         </div>
         <div ng-show="blankStatecase" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards">
@@ -136,21 +137,6 @@
                   <p class="lead">{{ _('cases  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}
                   </p>
               </div>
-          </div>
-        </div>
-        <div class="clearfix"></div>
-      </div><!--/inner-cards-container-->
-      <!--$Blank state-->
-      <div class="col-md-12 " ng-show="blankStatecase">
-        <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
-          <div class="">
-            <div class="blank_slate_arrow"></div>
-            <div class="thumbnail blank_slate_body">
-              <img class="img-responsive" src="/static/img/cases_blank.png">
-              <p class="lead">
-                {{ _('cases  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}
-              </p>
-            </div>
           </div>
         </div>
         <div class="clearfix"></div>
@@ -170,7 +156,6 @@
     </div>
     </div>
     </div>
-  </div>
   </div>
       <div class="col-md-3 ">
       <div class="row">
@@ -353,6 +338,11 @@
         placeholder: "Click to Select a label",
         allowClear: false
     });
+  $('.waterfall').waterfall({
+        colMinWidth: 315,
+        defaultContainerWidth: 870,
+        autoresize: true
+      });
   var handleUniform = function () {
         if (!jQuery().uniform) {
             return;
@@ -368,11 +358,6 @@
         }
     }
     handleUniform();
-      $('.waterfall').waterfall({ 
-          colMinWidth: 200, 
-          defaultContainerWidth: 800,
-          autoresize: true
-        });  
 $('.textfill').textfill({debug: true, maxFontPixels: 16});               
 </script>
 
